[tool.poetry]
name = "pymutekiu"
version = "0.1.0"
description = "Besta RTOS userland emulator"
authors = ["dogtopus <dogtopus@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
unicorn = "^2.0.1.post1"
pefile = "^2023.2.7"
fs = {git = "https://github.com/Project-Muteki/pyfilesystem2.git"}
configargparse = "^1.7"
pygame-ce = "^2.4.1"

[tool.poetry.group.dev.dependencies]
types-pefile = "^2023.2.7.post0"
setuptools = "^70.0.0"
ipython = "^8.18.1"
keystone-engine = "^0.9.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'pymutekiu.cli:main'
tests = 'tests:run_all'
